; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/extr_industrialio-ring.c_iio_ring_buffer_unregister.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/extr_industrialio-ring.c_iio_ring_buffer_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_ring_buffer = type { i32, i32 }

@iio_ring_idr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iio_ring_buffer_unregister(%struct.iio_ring_buffer* %0) #0 {
  %2 = alloca %struct.iio_ring_buffer*, align 8
  store %struct.iio_ring_buffer* %0, %struct.iio_ring_buffer** %2, align 8
  %3 = load %struct.iio_ring_buffer*, %struct.iio_ring_buffer** %2, align 8
  %4 = call i32 @__iio_free_ring_buffer_access_chrdev(%struct.iio_ring_buffer* %3)
  %5 = load %struct.iio_ring_buffer*, %struct.iio_ring_buffer** %2, align 8
  %6 = call i32 @__iio_free_ring_buffer_event_chrdev(%struct.iio_ring_buffer* %5)
  %7 = load %struct.iio_ring_buffer*, %struct.iio_ring_buffer** %2, align 8
  %8 = getelementptr inbounds %struct.iio_ring_buffer, %struct.iio_ring_buffer* %7, i32 0, i32 1
  %9 = call i32 @device_del(i32* %8)
  %10 = load %struct.iio_ring_buffer*, %struct.iio_ring_buffer** %2, align 8
  %11 = getelementptr inbounds %struct.iio_ring_buffer, %struct.iio_ring_buffer* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @iio_free_idr_val(i32* @iio_ring_idr, i32 %12)
  ret void
}

declare dso_local i32 @__iio_free_ring_buffer_access_chrdev(%struct.iio_ring_buffer*) #1

declare dso_local i32 @__iio_free_ring_buffer_event_chrdev(%struct.iio_ring_buffer*) #1

declare dso_local i32 @device_del(i32*) #1

declare dso_local i32 @iio_free_idr_val(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
